--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   build_runner: ^2.1.11
   vexana: ^2.8.1
   kartal: ^2.1.0
+  audioplayers: ^1.0.1
 
 dev_dependencies:
   flutter_test:
