--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,17 +34,32 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  equatable: ^2.0.3
+
+  #State
   flutter_bloc: ^8.0.1
+
+  #Convert
+  equatable: ^2.0.3
   json_annotation: ^4.5.0
   json_serializable: ^6.2.0
   build_runner: ^2.1.11
+
+  #Network
   vexana: ^2.8.1
-  kartal: ^2.1.0
-  audioplayers: ^1.0.1
-  translator: ^0.1.7
   http: ^0.13.4
   html_unescape: ^2.0.0
+
+  #Utility
+  kartal: ^2.1.0
+
+  #Audio
+  audioplayers: ^1.0.1
+
+  #Translate
+  translator: ^0.1.7
+
+  #Widget
+  flutter_custom_clippers: ^2.0.0
 
 dev_dependencies:
   flutter_test:
